Add Image post card and seo tags, add tags to every post
download minima folder htmls for customization of files

Add glownet's card

Add resume in the github repo itself for easy redirection

--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,13 @@ url: "https://glownet.io" # the base hostname & protocol for your site, e.g. htt
 # twitter_username: jekyllrb
 github_username:  ayushi2019031
 
+logo: images/post-cards/global-glownet-card.webp
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
 
 future: true
 
