--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,12 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-sitemap
+  - jekyll-toc
 
+markdown: kramdown
+kramdown:
+  toc_levels: 2..4
+  
 future: true
 
 # Exclude from processing.
