--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,9 @@ defaults:
 
 future: true
 
+warp:
+  enabled: false
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
